--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,13 +16,14 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
     "prisma:seed": "tsx prisma/seed.ts",
+    "prisma:studio": "prisma studio --schema=./prisma/schema.prisma",
     "test": "vitest run"
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0"
+    "@prisma/client": "^5.22.0"
   },
   "devDependencies": {
-    "prisma": "^5.18.0",
+    "prisma": "^5.22.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
