--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,14 +18,17 @@
     "dotenv": "^17.2.1",
     "fastify": "^4.28.1",
     "fastify-plugin": "^5.0.1",
+    "fastify-type-provider-zod": "^5.0.3",
     "pino": "^9.4.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
-    "supertest": "^7.0.0",
+    "@types/supertest": "^6.0.3",
+    "prisma": "^5.22.0",
+    "supertest": "^7.1.4",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.9"
   }
 }
