--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,8 @@
     "@fastify/cors": "^8.5.0",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
+    "@fastify/cookie": "^9.3.0",
+    "@fastify/jwt": "^8.0.1",
     "@orenna/db": "workspace:*",
     "@orenna/shared": "workspace:*",
     "@prisma/client": "5.22.0",
@@ -20,11 +22,13 @@
     "fastify-plugin": "^5.0.1",
     "fastify-type-provider-zod": "^5.0.3",
     "pino": "^9.4.0",
+    "siwe": "^2.1.7",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.3",
+    "viem": "^2.13.7",
     "prisma": "^5.22.0",
     "supertest": "^7.1.4",
     "tsx": "^4.16.2",
