--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "db:seed": "pnpm --filter @orenna/db prisma:seed"
   },
   "devDependencies": {
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vitest": "^2.1.9",
+    "@types/node": "^20.12.12"
   }
 }
