--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "echo \"(eslint to be added later)\"",
     "db:generate": "pnpm --filter @orenna/db prisma:generate",
     "db:migrate": "pnpm --filter @orenna/db prisma:migrate",
+    "db:deploy": "pnpm --filter @orenna/db prisma:deploy",
     "db:seed": "pnpm --filter @orenna/db prisma:seed"
   },
   "devDependencies": {
-    "typescript": "^5.5.4"
+    "@types/node": "^20.12.12",
+    "@vitest/ui": "^2.1.9",
+    "supertest": "^7.1.4",
+    "typescript": "^5.5.4",
+    "vitest": "^2.1.9"
   }
 }
