--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
+    "types": ["node"],
+    "lib": ["ES2022"],
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "target": "ES2022",
+    "strict": true,
+    "skipLibCheck": true,
+    "noEmit": true
   },
-  "include": [
-    "src",
-    "tests"
-  ]
+  "include": ["./**/*.ts"]
 }
