--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "types": ["node"],
+    "lib": ["ES2022"],
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "target": "ES2022",
+    "strict": true,
+    "skipLibCheck": true,
+    "noEmit": true
   },
-  "include": [
-    "src",
-    "prisma"
-  ]
+  "include": ["./**/*.ts", "./prisma/**/*.ts"]
 }
