--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "pnpm -r --filter ./packages/* --filter ./apps/* run build",
     "dev": "pnpm --filter @orenna/api dev",
-    "test": "pnpm -r --filter ./apps/* --filter ./packages/* test",
+    "test": "vitest run --reporter=dot --passWithNoTests && pnpm -r --filter ./apps/* --filter ./packages/* test -- --reporter=dot --passWithNoTests",
     "typecheck": "pnpm -r --filter ./apps/* --filter ./packages/* typecheck",
     "lint": "echo \"(eslint to be added later)\"",
     "db:generate": "pnpm --filter @orenna/db prisma:generate",
@@ -13,6 +13,7 @@
     "db:seed": "pnpm --filter @orenna/db prisma:seed"
   },
   "devDependencies": {
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@types/node": "^20"
   }
 }
