--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,6 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: orenna
-        ports: ["5432:5432"]
         options: >-
           --health-cmd="pg_isready -U postgres -d orenna"
           --health-interval=5s --health-timeout=5s --health-retries=20
@@ -30,13 +29,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # 1) Node (no pnpm cache here)
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
+          check-latest: true
 
-      # Try official pnpm action (fastest)
+      # 2) Install pnpm (action) with Corepack fallback
       - name: Setup pnpm (action)
         id: setup_pnpm
         continue-on-error: true
@@ -45,20 +44,26 @@ jobs:
           version: 9
           run_install: false
 
-      # Fallback if the action is blocked
       - name: Enable pnpm via Corepack (fallback)
         if: steps.setup_pnpm.outcome == 'failure'
         run: |
           corepack enable
           corepack prepare pnpm@9 --activate
 
-      - name: Show versions
-        run: |
-          node -v
-          pnpm -v
+      # 3) Cache the pnpm store
+      - name: Get pnpm store path
+        run: echo "PNPM_STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
+      - uses: actions/cache@v4
+        with:
+          path: ${{ env.PNPM_STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      # 4) Install + run
       - name: Install deps
-        run: pnpm -w install --frozen-lockfile
+        run: pnpm -v && pnpm -w install --frozen-lockfile
 
       - name: DB migrate + seed
         run: |
@@ -69,4 +74,6 @@ jobs:
         run: pnpm -w typecheck
 
       - name: Test
+        run: pnpm -w test
+
         run: pnpm -w test
