--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
         
+      - name: Clean migration history
+        run: rm -rf packages/db/prisma/migrations   
+        
       - name: Run migrations
         run: pnpm -w db:migrate
         env:
