--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,17 +53,57 @@ jobs:
           restore-keys: ${{ runner.os }}-pnpm-store-
 
       # 4) Install + run
+name: CI
+
+on: [push, pull_request]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: orenna_test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
+          
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
+        
+      - name: Verify vitest installation
+        run: pnpm vitest --version
         
       - name: Clean migration history
-        run: rm -rf packages/db/prisma/migrations   
+        run: rm -rf packages/db/prisma/migrations
         
       - name: Run migrations
         run: pnpm -w db:migrate
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/orenna_test
           
+      - name: Run type checks
+        run: pnpm typecheck
+        
       - name: Run tests
         run: pnpm test
         env:
