--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
     "@orenna/shared": "workspace:*",
     "@prisma/client": "5.22.0",
     "dotenv": "^17.2.1",
+    "ethers": "^6.0.0",
     "fastify": "^4.28.1",
     "fastify-plugin": "^5.0.1",
     "fastify-type-provider-zod": "^5.0.3",
