--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,16 +9,17 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@fastify/cors": "^8.5.0",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^3.0.0",
-    "@fastify/cookie": "^9.3.0",
-    "@fastify/jwt": "^8.0.1",
+    "@fastify/cookie": "^10.0.1",
+    "@fastify/cors": "^10.1.0",
+    "@fastify/jwt": "^9.1.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@orenna/db": "workspace:*",
     "@orenna/shared": "workspace:*",
     "@prisma/client": "5.22.0",
+    "@vitest/ui": "^1.6.1",
     "dotenv": "^17.2.1",
-    "fastify": "^4.28.1",
+    "fastify": "^5.5.0",
     "fastify-plugin": "^5.0.1",
     "fastify-type-provider-zod": "^5.0.3",
     "pino": "^9.4.0",
@@ -28,11 +29,11 @@
   "devDependencies": {
     "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.3",
-    "viem": "^2.13.7",
     "prisma": "^5.22.0",
     "supertest": "^7.1.4",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4",
-    "vitest": "^2.1.9"
+    "viem": "^2.13.7",
+    "vitest": "^1.6.1"
   }
 }
