--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx src/server.ts",
-    "build": "tsc -p tsconfig.json",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "dev": "dotenv -e ../../.env -- tsx src/server.ts",
+    "build": "typescript",
+    "typecheck": "tsc --noEmit",
     "test": "vitest run"
   },
   "dependencies": {
@@ -24,12 +24,13 @@
     "fastify-type-provider-zod": "^5.0.3",
     "pino": "^9.4.0",
     "siwe": "^2.1.7",
-    "viem": "^2.21.1",
+    "viem": "^2.33.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.3",
+    "dotenv-cli": "^10.0.0",
     "prisma": "^5.22.0",
     "supertest": "^7.1.4",
     "tsx": "^4.16.2",
