--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "db:seed": "pnpm --filter @orenna/db prisma:seed"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
-    "@types/node": "^20",
-    "vitest": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
-    "prisma": "^5.22.0",
     "@prisma/client": "^5.22.0",
-    "esbuild": "^0.21.5"
+    "@types/node": "^20",
+    "@vitest/ui": "^1.6.0",
+    "dotenv-cli": "^10.0.0",
+    "esbuild": "^0.21.5",
+    "prisma": "^5.22.0",
+    "typescript": "^5.5.4",
+    "vitest": "^1.6.0"
   }
 }
