--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "src/server.ts": {
-      "runtime": "@vercel/node@3.2.23",
+      "runtime": "@vercel/node@20.x",
       "maxDuration": 30
     }
   },
