fix: use legacy Vercel builds configuration

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,14 +1,15 @@
 {
   "version": 2,
-  "functions": {
-    "src/server.ts": {
-      "maxDuration": 30
-    }
-  },
-  "rewrites": [
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/src/server.ts"
+      "src": "src/server.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/server.ts"
     }
   ]
 }
