--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "dotenv -e ../../.env -- tsx src/server.ts",
-    "build": "typescript",
+    "build": "tsc",
     "typecheck": "tsc --noEmit",
     "test": "vitest run"
   },
