fix: move prisma to dependencies for production builds

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -22,11 +22,11 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0"
+    "@prisma/client": "^5.22.0",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "dotenv-cli": "^7.4.2",
-    "prisma": "^5.22.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4",
     "vitest": "^1.6.1"
