--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "src/server.ts": {
-      "maxDuration": 30
+  "builds": [
+    {
+      "src": "src/server.ts",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
