--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,11 +4,11 @@
   "type": "module",
   "scripts": {
     "dev": "dotenv -e ../../.env -- tsx src/server.ts",
-    "build": "prisma generate && tsc",
+    "build": "pnpm --filter @orenna/db prisma:generate && tsc",
     "start": "node dist/server.js",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
-    "postinstall": "prisma generate"
+    "postinstall": "pnpm --filter @orenna/db prisma:generate"
   },
   "dependencies": {
     "@fastify/cookie": "^10.0.1",
@@ -22,7 +22,6 @@
     "@sinclair/typebox": "^0.33.15",
     "@orenna/db": "workspace:*",
     "@orenna/shared": "workspace:*",
-    "@prisma/client": "5.22.0",
     "@vitest/ui": "^1.6.1",
     "bull": "^4.15.1",
     "csv-parser": "^3.0.0",
@@ -46,7 +45,6 @@
     "@types/supertest": "^6.0.3",
     "@types/ws": "^8.5.12",
     "dotenv-cli": "^10.0.0",
-    "prisma": "^5.22.0",
     "supertest": "^7.1.4",
     "typescript": "^5.5.4",
     "vitest": "^1.6.1"
